--- a/SVOs_extraction_v2.ipynb
+++ b/SVOs_extraction_v2.ipynb
@@ -33,7 +33,7 @@
     "import sys\n",
     "\n",
     "## Run to install the language library, then comment-out\n",
-    "## !{sys.executable} -m spacy download en_core_web_md\n",
+    "!{sys.executable} -m spacy download en_core_web_md\n",
     "\n",
     "nlp = spacy.load('en_core_web_md')\n",
     "print('Finished loading.')\n"
@@ -86,7 +86,7 @@
    "metadata": {},
    "source": [
     "\n",
-    "* Read the file _articles_5_23_20_27.xlsx_ with the fresh scraped content from the SE articles, i.e. the titles, URLs, abstracts, context sections, paragraph titles, full contents and related categories into a dataframe _SE_df_. In later versions, the corresponding tables will be directly loaded from the database. \n",
+    "* Read the file _articles_5_23_20_27.xlsx_ with the fresh scraped content from the SE articles, i.e. the titles, URLs, abstracts, context sections, paragraph titles, full contents and related categories into a dataframe _SE_df_. This file was created with the existing spider and is easy to reproduce. In later versions, it will be created from the tables in the database. \n",
     "* Discard records with missing or duplicate titles and/or abstracts and/or raw contents (but *not* context sections which are frequently the same and some are missing) and do some data cleansing using function _clean()_. \n",
     "* Discard records which have empty strings in any of these columns (titles, abstracts, raw contents) after this data cleansing.\n"
    ]
@@ -372,10 +372,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "* Similarly, read file _concepts_5_23_21_55.xlsx_ with the fresh scraped content from the SE Glossary articles, i.e. the titles, URLs, definitions and related categories into a dataframe _GL_df_. In later versions, the corresponding tables will be directly loaded from the database.\n",
+    "* Similarly, read file _concepts_5_23_21_55.xlsx_ with the fresh scraped content from the SE Glossary articles, i.e. the titles, URLs, definitions and related categories into a dataframe _GL_df_. This file was created with the existing spider and is easy to reproduce. In later versions, it will be created from the tables in the database.\n",
     "* Discard records with missing titles and/or URLs and/or definitions and do some data cleansing of the definitions using function _clean()_. \n",
     "* Drop records with duplicate URLs. \n",
-    "* Discard records with definitions which point to redirections ('Redirect to ...) or are the remnants of deleted articles ('The revision #...'.\n",
+    "* Discard records with definitions which point to redirections ('Redirect to ...) or are the remnants of deleted articles ('The revision #...').\n",
     "* Discard duplicates in titles and definitions (which point to the same articles)."
    ]
   },
@@ -1129,7 +1129,7 @@
     "***\n",
     "\n",
     "\n",
-    "In each dataframe, create column **NER** which will hold dictionaries with the entities recognized as: \n",
+    "In each dataframe (SE_df and GL_df), create column **NER** which will hold dictionaries with the entities recognized as: \n",
     " * Companies, agencies, institutions, etc. (code ORG), \n",
     " * Countries, cities, states (code GPE), \n",
     " * Nationalities or religious or political groups (code NORP), \n",
@@ -1140,7 +1140,7 @@
     " * Any named language (code LANGUAGE),\n",
     " * People, including fictional (code PERSON).\n",
     "\n",
-    "In column NER in a record, the key is the entity and the values are:\n",
+    "In column **NER** in a record, the key is the entity and the values are:\n",
     "* a list with the tuples of the occurences of the entity (token span's *start* index position, token span's *stop* index position), \n",
     "* a list of the corresponding (coded) sources, and \n",
     "* the count of occurences in the content of the text processed.\n",
@@ -1271,6 +1271,7 @@
     "                                Glob_NER_SVOs[key] = [[sv],[source],[dat.loc[i,'title']],[dat.loc[i,'url']],[sent.text],1] \n",
     "                \n",
     "            \n",
+    "                ## Continue loop C1 over each SVO # column 16, now with the Categories\n",
     "                sj = ' '.join(sv)\n",
     "                doc_sj = nlp(sj)\n",
     "                sj = [w.text.lower() for w in doc_sj if not w.is_punct]\n",
@@ -1281,7 +1282,7 @@
     "                if len(sj) == 0: continue\n",
     "                #print('\\n',sv_copy)\n",
     "                ##print('sj = ',sj)\n",
-    "                for m in range(len(Categories_df)): ## loop C2 over categories vs an SVOs in a sentence\n",
+    "                for m in range(len(Categories_df)): ## loop C2 over categories vs an SVO in a sentence\n",
     "                #-----------------------------------------------------------------------------------    \n",
     "                    ##print('cats:',categories_df.loc[m,'Category tokens'])\n",
     "                    try:\n",
@@ -1303,7 +1304,7 @@
     "                        else:\n",
     "                            dat.loc[i,'NER_SVOs'][key] = [[sv],[source],1]\n",
     "                            \n",
-    "                        ## global dictionary - avoid duplicates\n",
+    "                        ## global dictionary \n",
     "                        if key in Glob_NER_SVOs.keys():\n",
     "                            if sv not in Glob_NER_SVOs[key][0]:\n",
     "                                Glob_NER_SVOs[key][0].append(sv) \n",
@@ -1606,12 +1607,12 @@
    "source": [
     "### Step 7. Checking the dictionary with all SVOs collected\n",
     "***\n",
-    "* And write all SVOs to a text file. This includes all information useful for debugging."
+    "* And write all SVOs to both Excel and text files. The files include all information useful for debugging."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -1874,17 +1875,17 @@
       "<Cat:PAGES WITH BROKEN FILE LINKS> 2  entries\n",
       "<Cat:PARTICIPATION IN CULTURE> 6  entries\n",
       "<Cat:PARTICIPATION IN EDUCATION AND TRAINING> 11  entries\n",
-      "<Cat:POPULATION> 1  entries\n"
+      "<Cat:POPULATION> 1  entries\n",
+      "<Cat:POPULATION > 1  entries\n",
+      "<Cat:POPULATION AGEING> 26  entries\n",
+      "<Cat:POPULATION AND SOCIAL CONDITIONS> 4  entries\n",
+      "<Cat:POPULATION BY AREA AND REGION> 34  entries\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "<Cat:POPULATION > 1  entries\n",
-      "<Cat:POPULATION AGEING> 26  entries\n",
-      "<Cat:POPULATION AND SOCIAL CONDITIONS> 4  entries\n",
-      "<Cat:POPULATION BY AREA AND REGION> 34  entries\n",
       "<Cat:POPULATION SIZE AND PROJECTIONS> 13  entries\n",
       "<Cat:POSTAL STATISTICS > 3  entries\n",
       "<Cat:POVERTY AND SOCIAL EXCLUSION> 16  entries\n",
@@ -2217,13 +2218,7 @@
       "<MBT> 1  entries\n",
       "<MDL> 1  entries\n",
       "<MELILLA> 1  entries\n",
-      "<MEMBER STATES> 62  entries\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "<MEMBER STATES> 62  entries\n",
       "<MERCOSUR> 1  entries\n",
       "<MESSINA> 1  entries\n",
       "<MEXICO> 3  entries\n",
@@ -2237,7 +2232,13 @@
       "<MONTENEGRO> 26  entries\n",
       "<MOROCCAN> 1  entries\n",
       "<MOROCCO> 15  entries\n",
-      "<MOX> 1  entries\n",
+      "<MOX> 1  entries\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "<MPI> 2  entries\n",
       "<MSITS> 1  entries\n",
       "<MSY> 1  entries\n",
@@ -2630,7 +2631,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2646,13 +2647,6 @@
     "        print(line)\n",
     " \n"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
