--- a/SVOs_extraction_v3.ipynb
+++ b/SVOs_extraction_v3.ipynb
@@ -2619,7 +2619,8 @@
     "                results.loc[c,'Sentence'] = ss\n",
     "\n",
     "#results.to_excel(outfile3c)\n",
-    "results.to_excel('SVOs_all.xlsx')"
+    "results.to_excel('SVOs_all.xlsx')\n",
+    "results"
    ]
   },
   {
